super big commit from everything we've on to make the Sass file structure perfect as well as adding js for time recognition and colors

--- a/sass/sassy.sass
+++ b/sass/sassy.sass
@@ -1,3 +1,5 @@
+@import application.scss
+
 body
   background-color: #f1ede1
 
@@ -81,27 +83,7 @@ ul
   width: 70%
   padding: 2em
 
-li
-  margin: .5em
-  position: relative
-  padding: 1em
-  box-shadow: 0 3px 0 #14bbb1
-  list-style-type: none
-  width: 50%
-  height: 1.5em
-  background-color: #fff
-  display: list-item
-  text-align: -webkit-match-parent
-  border-radius: .15em
-  font-family: sans-serif
-  font-size: .889em
-  color: #333
-  border: 1px solid #ebeaec
-  overflow: hidden
-  &:hover
-    box-shadow: 0 3px 0 #ffdc00
-  &:active
-    box-shadow: 0 3px 0 #d86969
+
 
 .submit
   margin: 1.5em 0
