--- a/sass/layouts/_placeholders.sass
+++ b/sass/layouts/_placeholders.sass
@@ -1,4 +1,4 @@
-%li-position {
+%li-position
   margin: .5em
   position: relative
   padding: 1em
@@ -7,4 +7,4 @@
   display: list-item
   border-radius: .15em
   overflow: hidden
-}
+
