--- a/css/application.css
+++ b/css/application.css
@@ -1,56 +1,29 @@
-/*
-Syntax error: File to import not found or unreadable: modules/modules.
-              Load paths:
-                /Users/MaxBrockman/code/TodoApp (DEPRECATED)
-                /Users/MaxBrockman/code/TodoApp/sass
-        on line 2 of sass/application.scss
+li {
+  text-align: -webkit-match-parent;
+  font-family: sans-serif;
+  font-size: .889em; }
 
-1: @import "typography/typography";
-2: @import "modules/modules";
-3: @import "layouts/layouts";
-4: @import "colors/colors";
+li {
+  margin: 0.5em;
+  position: relative;
+  padding: 1em;
+  width: 50%;
+  height: 1.5em;
+  display: list-item;
+  border-radius: 0.15em;
+  overflow: hidden; }
 
-Backtrace:
-sass/application.scss:2
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/import_node.rb:66:in `rescue in import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/import_node.rb:45:in `import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/import_node.rb:28:in `imported_file'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/import_node.rb:37:in `css_import?'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:283:in `visit_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:161:in `block in visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:160:in `visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:180:in `visit_root'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:151:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/root_node.rb:20:in `render'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/engine.rb:274:in `render'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:378:in `update_stylesheet'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:189:in `block in update_stylesheets'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:186:in `each'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:186:in `update_stylesheets'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:357:in `on_file_changed'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:250:in `block in watch'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: File to import not found or unreadable: modules/modules.\A               Load paths:\A                 /Users/MaxBrockman/code/TodoApp (DEPRECATED)\A                 /Users/MaxBrockman/code/TodoApp/sass\A         on line 2 of sass/application.scss\A \A 1: @import \"typography/typography\";\A 2: @import \"modules/modules\";\A 3: @import \"layouts/layouts\";\A 4: @import \"colors/colors\";"; }
+.theme-am {
+  background-color: #22475e;
+  color: #f0e797;
+  border: #75b0ba; }
+
+.theme2-noon {
+  background-color: #ffb759;
+  color: #1fcecb;
+  border: #50ec55; }
+
+.theme3-pm {
+  background-color: #5b164c;
+  color: #e11c5e;
+  border: #1f204f; }
