--- a/css/color/color.css
+++ b/css/color/color.css
@@ -1,119 +1,14 @@
-/*
-Syntax error: (box-shadow: 0.1em 0.1em 1em black) isn't a valid CSS value.
-        on line 5 of /Users/MaxBrockman/code/TodoApp/sass/color/_mixins.sass, in `li-color'
-        from line 2 of /Users/MaxBrockman/code/TodoApp/sass/color/_modules.sass
-        from line 3 of sass/color/color.scss
+.theme-am {
+  background-color: #22475e;
+  color: #f0e797;
+  border: #75b0ba; }
 
-1: @import "_config";
-2: @import "_mixins";
-3: @import "_modules";
+.theme2-noon {
+  background-color: #ffb759;
+  color: #1fcecb;
+  border: #50ec55; }
 
-Backtrace:
-/Users/MaxBrockman/code/TodoApp/sass/color/_mixins.sass:5:in `li-color'
-/Users/MaxBrockman/code/TodoApp/sass/color/_modules.sass:2
-sass/color/color.scss:3
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/script/value/map.rb:52:in `to_s'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:367:in `visit_prop'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:161:in `block in visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:160:in `visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:271:in `visit_if'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `block (2 levels) in visit_rule'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `map'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `block in visit_rule'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:387:in `visit_rule'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:335:in `block (4 levels) in visit_mixin'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:335:in `map'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:335:in `block (3 levels) in visit_mixin'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:335:in `block (2 levels) in visit_mixin'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:78:in `perform_arguments'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:330:in `block in visit_mixin'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:98:in `block in with_mixin'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:98:in `with_mixin'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:318:in `visit_mixin'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `block (2 levels) in visit_rule'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `map'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:389:in `block in visit_rule'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:387:in `visit_rule'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:297:in `block (2 levels) in visit_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:297:in `map'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:297:in `block in visit_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:88:in `block in with_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:88:in `with_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:294:in `visit_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:161:in `block in visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:160:in `visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:180:in `visit_root'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:151:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/root_node.rb:20:in `render'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/engine.rb:274:in `render'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:378:in `update_stylesheet'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:189:in `block in update_stylesheets'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:186:in `each'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:186:in `update_stylesheets'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:357:in `on_file_changed'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:250:in `block in watch'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: (box-shadow: 0.1em 0.1em 1em black) isn't a valid CSS value.\A         on line 5 of /Users/MaxBrockman/code/TodoApp/sass/color/_mixins.sass, in `li-color'\A         from line 2 of /Users/MaxBrockman/code/TodoApp/sass/color/_modules.sass\A         from line 3 of sass/color/color.scss\A \A 1: @import \"_config\";\A 2: @import \"_mixins\";\A 3: @import \"_modules\";"; }
+.theme3-pm {
+  background-color: #5b164c;
+  color: #e11c5e;
+  border: #1f204f; }
