--- a/css/sassy.css
+++ b/css/sassy.css
@@ -1,74 +1,126 @@
-/*
-Syntax error: File to import not found or unreadable: modules/modules.
-              Load paths:
-                /Users/MaxBrockman/code/TodoApp (DEPRECATED)
-                /Users/MaxBrockman/code/TodoApp/sass
-        on line 2 of sass/application.scss
-        from line 1 of sass/sassy.sass
+@charset "UTF-8";
+li {
+  text-align: -webkit-match-parent;
+  font-family: sans-serif;
+  font-size: .889em; }
 
-1: @import application.scss
-2: 
-3: body
-4:   background-color: #f1ede1
-5: 
-6: .flex
-7:   display: -webkit-box
+li {
+  margin: 0.5em;
+  position: relative;
+  padding: 1em;
+  width: 50%;
+  height: 1.5em;
+  display: list-item;
+  border-radius: 0.15em;
+  overflow: hidden; }
 
-Backtrace:
-sass/application.scss:2
-sass/sassy.sass:1
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/import_node.rb:66:in `rescue in import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/import_node.rb:45:in `import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/import_node.rb:28:in `imported_file'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/import_node.rb:37:in `css_import?'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:283:in `visit_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:297:in `block (2 levels) in visit_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:297:in `map'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:297:in `block in visit_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:88:in `block in with_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:88:in `with_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:294:in `visit_import'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `block in with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:121:in `with_frame'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/stack.rb:79:in `with_base'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:161:in `block in visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:160:in `visit_children'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:180:in `visit_root'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:151:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/tree/root_node.rb:20:in `render'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/engine.rb:274:in `render'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:378:in `update_stylesheet'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:189:in `block in update_stylesheets'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:186:in `each'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:186:in `update_stylesheets'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:357:in `on_file_changed'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/lib/sass/plugin/compiler.rb:250:in `block in watch'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Users/MaxBrockman/.rvm/gems/ruby-2.1.1/gems/sass-3.3.8/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: File to import not found or unreadable: modules/modules.\A               Load paths:\A                 /Users/MaxBrockman/code/TodoApp (DEPRECATED)\A                 /Users/MaxBrockman/code/TodoApp/sass\A         on line 2 of sass/application.scss\A         from line 1 of sass/sassy.sass\A \A 1: @import application.scss\A 2: \A 3: body\A 4:   background-color: #f1ede1\A 5: \A 6: .flex\A 7:   display: -webkit-box"; }
+.theme-am {
+  background-color: #22475e;
+  color: #f0e797;
+  border: #75b0ba; }
+
+.theme2-noon {
+  background-color: #ffb759;
+  color: #1fcecb;
+  border: #50ec55; }
+
+.theme3-pm {
+  background-color: #5b164c;
+  color: #e11c5e;
+  border: #1f204f; }
+
+body {
+  background-color: #f1ede1; }
+
+.flex {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-box-pack: start;
+  -moz-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-align-content: flex-start;
+  -ms-flex-line-pack: start;
+  align-content: flex-start;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.space {
+  margin: 0.5em 0; }
+
+#list .checked {
+  color: #999999; }
+  #list .checked:after {
+    content: " ✓"; }
+#list .done {
+  color: #999999; }
+
+#item {
+  border: 0;
+  padding: 0 1em;
+  width: 58%;
+  height: 2.25em;
+  margin: 0.5em 0; }
+  #item:focus {
+    outline: 0;
+    background-color: #d4dec1;
+    color: #14bbb1;
+    border: 0; }
+
+label, input {
+  display: block; }
+
+label input {
+  width: 20em;
+  height: 2em;
+  font-size: 1.25em; }
+
+h1 {
+  width: 13em;
+  line-height: 2.25em;
+  background-color: #7bccf9;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: sans-serif;
+  vertical-align: middle;
+  color: white;
+  border-radius: 0.25em; }
+
+ul {
+  border-top: 1px solid #dedede;
+  width: 70%;
+  padding: 2em; }
+
+.submit {
+  margin: 1.5em 0;
+  -webkit-border-radius: 0.75em;
+  -moz-border-radius: 0.75em;
+  border-radius: 0.75em;
+  width: 13em;
+  height: 3em;
+  box-shadow: 0em;
+  color: white;
+  background-color: #14bbb1;
+  border: 0;
+  font-size: 1em;
+  text-transform: Uppercase;
+  outline: none; }
+  .submit:hover {
+    background-color: #1b8e87; }
