--- a/sass/application.scss
+++ b/sass/application.scss
@@ -1,4 +1,5 @@
 @import "typography/typography";
-@import "modules/modules";
 @import "layouts/layouts";
-@import "colors/colors";
+@import "color/color";
+@import "base/base";
+
